// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should cover enabled and disabled EULA exports in quick-start mode > quick-start-eula-disabled-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # Anthropic 官方 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # 无需 ANTHROPIC_URL，默认使用 Anthropic 官方端点
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should cover enabled and disabled EULA exports in quick-start mode > quick-start-eula-enabled-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      ACCEPT_EULA: "Y"
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # Anthropic 官方 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # 无需 ANTHROPIC_URL，默认使用 Anthropic 官方端点
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should emit managed persistence volumes only for retained executors in quick-start mode > quick-start-retained-cli-persistence-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Codex 运行时配置
      # 使用 CODEX_* 环境变量
      # OPENAI_* 变量可作为兼容别名
      # ==================================================
      CODEX_API_KEY: "test-codex-key"
      # OPENAI_* 变量可作为兼容别名: OPENAI_API_KEY = CODEX_API_KEY
      # CODEX_BASE_URL：可选，未设置时使用默认值
      # OPENAI_* 变量可作为兼容别名: OPENAI_BASE_URL = CODEX_BASE_URL
      # ==================================================
      # OpenCode 运行时配置
      # 使用统一镜像内置的托管 OpenCode 运行时契约
      # ==================================================
      AI__Providers__Providers__OpenCodeCli__Enabled: "true"
      AI__Providers__Providers__OpenCodeCli__Type: "OpenCodeCli"
      AI__Providers__Providers__OpenCodeCli__ExecutablePath: "opencode"
      AI__OpenCode__Enabled: "true"
      AI__OpenCode__ExecutablePath: "opencode"
      AI__OpenCode__Model: "anthropic/claude-sonnet-4"
    ports:
      - "8080:45000"
    volumes:
      - /workspace:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - codex-data:/home/hagicode/.codex
      - opencode-config-data:/home/hagicode/.config/opencode
      - opencode-auth-data:/home/hagicode/.local/share/opencode
      - opencode-models-data:/home/hagicode/.cache/opencode
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  codex-data:
  opencode-config-data:
  opencode-auth-data:
  opencode-models-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should export the managed OpenCode config volume in quick-start mode by default > quick-start-opencode-managed-volume-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # OpenCode 运行时配置
      # 使用统一镜像内置的托管 OpenCode 运行时契约
      # ==================================================
      AI__Providers__Providers__OpenCodeCli__Enabled: "true"
      AI__Providers__Providers__OpenCodeCli__Type: "OpenCodeCli"
      AI__Providers__Providers__OpenCodeCli__ExecutablePath: "opencode"
      AI__OpenCode__Enabled: "true"
      AI__OpenCode__ExecutablePath: "opencode"
      AI__OpenCode__Model: "anthropic/claude-sonnet-4"
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - opencode-config-data:/home/hagicode/.config/opencode
      - opencode-auth-data:/home/hagicode/.local/share/opencode
      - opencode-models-data:/home/hagicode/.cache/opencode
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  opencode-config-data:
  opencode-auth-data:
  opencode-models-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate explicit executor branches for Codex and OpenCode without default-provider routing > quick-start-retained-executor-matrix-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Codex 运行时配置
      # 使用 CODEX_* 环境变量
      # OPENAI_* 变量可作为兼容别名
      # ==================================================
      CODEX_API_KEY: "test-codex-key"
      # OPENAI_* 变量可作为兼容别名: OPENAI_API_KEY = CODEX_API_KEY
      # CODEX_BASE_URL：可选，未设置时使用默认值
      # OPENAI_* 变量可作为兼容别名: OPENAI_BASE_URL = CODEX_BASE_URL
      # ==================================================
      # OpenCode 运行时配置
      # 使用统一镜像内置的托管 OpenCode 运行时契约
      # ==================================================
      AI__Providers__Providers__OpenCodeCli__Enabled: "true"
      AI__Providers__Providers__OpenCodeCli__Type: "OpenCodeCli"
      AI__Providers__Providers__OpenCodeCli__ExecutablePath: "opencode"
      AI__OpenCode__Enabled: "true"
      AI__OpenCode__ExecutablePath: "opencode"
      AI__OpenCode__Model: "anthropic/claude-sonnet-4"
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - codex-data:/home/hagicode/.codex
      - opencode-config-data:/home/hagicode/.config/opencode
      - opencode-auth-data:/home/hagicode/.local/share/opencode
      - opencode-models-data:/home/hagicode/.cache/opencode
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  codex-data:
  opencode-config-data:
  opencode-auth-data:
  opencode-models-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Anthropic provider (zh-CN) > quick-start-anthropic-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # Anthropic 官方 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # 无需 ANTHROPIC_URL，默认使用 Anthropic 官方端点
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for ZAI provider (zh-CN) > quick-start-zai-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # 智谱 AI (ZAI) - 使用 Anthropic 兼容 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      ANTHROPIC_URL: "https://open.bigmodel.cn/api/anthropic"
      # API 提供商：智谱 AI (ZAI)
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for custom provider (zh-CN) > quick-start-custom-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # 自定义 Anthropic 兼容 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      ANTHROPIC_URL: "https://custom-api.example.com"
      # API 提供商：自定义端点
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for default quick start config (en-US) > quick-start-default-en-US 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 1/1/2024, 12:00:00 AM

# ==================================================
# Support Information
# ==================================================
# If you encounter any issues or need technical support:
# - Join our QQ group: 610394020
# - Join our Discord community: https://discord.gg/qY662sJK
# - We provide real-time assistance and solutions
# - Share your experiences and connect with other users

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Runtime Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI, Aliyun, and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # No ANTHROPIC_URL needed; the default Anthropic endpoint is used
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # System data volume; Code Server runtime state lives under /app/data/code-server
      - hagicode_data:/app/data
      # Save-state volume; the main database and Orleans state live under /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Quick Start Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for default quick start config (zh-CN) > quick-start-default-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # Anthropic 官方 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # 无需 ANTHROPIC_URL，默认使用 Anthropic 官方端点
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;
